--- a/views/login.html
+++ b/views/login.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="container" style="width:25em">
-        <form>
+        <form method="POST">
             <div class="form-group">
                 <label>Account</label>
                 <input type="text" id="uname" class="form-control" placeholder="Email" name="uname">
@@ -21,11 +21,9 @@
                 <input type="password" id="pwd" class="form-control" placeholder="Password" name="pwd">
             </div>
             <div class="form-group">
-                <button type="button" class="btn btn-default" onclick="signIn()">Sign In</button>
-                <button type="button" class="btn btn-default" onclick="signUp()">Sign Up</button>
-
+                <a href="/login"><button type="submit" class="btn btn-default" onclick="return signIn();">Sign in</button></a>
                 <script type="text/javascript">
-                    function checkInput() {
+                    function signIn() {
                         var uname = document.getElementById("uname")
                         if (uname.value.length == 0) {
                             alert("Invalid account.")
@@ -37,20 +35,6 @@
                             alert("Invalid password.")
                             return false;
                         }
-                    }
-
-                    function signIn() {    
-                        var uname = document.getElementById("uname").value
-                        var pwd = document.getElementById("pwd").value
-
-                        $.post("/login/signin", {"uname": uname, "pwd": pwd})
-                    }
-
-                    function signUp() {
-                        var uname = document.getElementById("uname").value
-                        var pwd = document.getElementById("pwd").value
-
-                        $.post("/login/signup", {"uname": uname, "pwd": pwd})
                     }
                 </script>
             </div>
