--- a/views/login.html
+++ b/views/login.html
@@ -11,19 +11,21 @@
     </div>
 
     <div class="container" style="width:25em">
-        <form method="POST">
+        <form method="POST" action="/login/signin">
             <div class="form-group">
                 <label>Account</label>
-                <input type="text" id="uname" class="form-control" placeholder="Email" name="uname">
+                <input type="text" name="uname" class="form-control" placeholder="Email" name="uname">
             </div>
+            
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" id="pwd" class="form-control" placeholder="Password" name="pwd">
+                <input type="password" name="pwd" class="form-control" placeholder="Password" name="pwd">
             </div>
-            <div class="form-group">
-                <a href="/login"><button type="submit" class="btn btn-default" onclick="return signIn();">Sign in</button></a>
+
+            <div class="form-group"></div>
+                <input type="submit" class="btn btn-default" onclick="return checkInput();" value="Sign in">
                 <script type="text/javascript">
-                    function signIn() {
+                    function checkInput() {
                         var uname = document.getElementById("uname")
                         if (uname.value.length == 0) {
                             alert("Invalid account.")
