--- a/views/index.html
+++ b/views/index.html
@@ -12,6 +12,11 @@
     
     <p>
         <h1>Hello world</h1>
+        {{if .IsLogin}}
+        had login
+        {{else}}
+        Anonymous
+        {{end}}
     </p>
 
 </body>
