--- a/views/login.html
+++ b/views/login.html
@@ -14,12 +14,12 @@
         <form method="POST" action="/login/signin">
             <div class="form-group">
                 <label>Account</label>
-                <input type="text" name="uname" class="form-control" placeholder="Email" name="uname">
+                <input type="text" name="uname" class="form-control" placeholder="Email">
             </div>
             
             <div class="form-group">
                 <label>Password</label>
-                <input type="password" name="pwd" class="form-control" placeholder="Password" name="pwd">
+                <input type="password" name="pwd" class="form-control" placeholder="Password">
             </div>
 
             <div class="form-group"></div>
