--- a/views/register.html
+++ b/views/register.html
@@ -10,56 +10,68 @@
         </div>
     </div>
 
-    <div class="container" style="width:25em">
-        <form method="POST" action="/login/signin">
+    <div class="container" style="width:30em">
+        <form method="POST" action="/register">
             <div class="form-group">
-                <label>Account *</label>
-                <input type="text" name="uname" class="form-control" placeholder="Email" name="uname">
+                <div class="input-group">
+                    <span class="input-group-addon" id="basic-addon1">Account: *</span>
+                    <input type="text" name="uname" class="form-control" placeholder="Email" aria-describedby="basic-addon1">
+                </div>
             </div>
 
             <div class="form-group">
-                <label>Nick Name</label>
-                <input type="text" name="nickname" class="form-control" placeholder="Nick name" name="nickname">
+                <div class="input-group">
+                    <span class="input-group-addon" id="basic-addon1">Nick Name: </span>
+                    <input type="text" name="nickname" class="form-control" placeholder="Nick name" aria-describedby="basic-addon1">
+                </div>
             </div>
 
+            <!-- 
             <div class="form-group">
-                <label>Permission Rule</label>
-            </div>
-            <div class="btn-group">
-                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    Select you permission rule  <span class="caret"></span>
-                </button>
-                <ul class="dropdown-menu">
-                    {{range .PersmissionRules}}
-                        <li><a href="#">{{.}}</a></li>
-                    {{end}}
-                </ul>
-            </div>
+                <div class="input-group">
+                    <span class="input-group-addon" id="basic-addon1">Permission: </span>
+                    <div class="btn-group">
+                        <button type="button" class="btn btn-default">Select permission</button>
+                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            <span class="caret"></span>
+                            <span class="sr-only">Toggle Dropdown</span>
+                        </button>
+                        <ul class="dropdown-menu">
+                            {{range .PersmissionRules}}
+                            <li><a href="#">{{.}}</a></li>
+                            {{end}}
+                        </ul>
+                    </div>
+                </div>
+            </div> 
+            -->
 
             <div class="form-group">
-                <label>Password</label>
-                <input type="password" name="pwd" class="form-control" placeholder="Password" name="pwd">
+                <div class="input-group">
+                    <span class="input-group-addon" id="basic-addon1">Password: </span>
+                    <input type="password" name="pwd" class="form-control" placeholder="Password">
+                </div>
             </div>
 
             <div class="form-group"></div>
-                <input type="submit" class="btn btn-default" onclick="return checkInput();" value="Register">
-                <script type="text/javascript">
-                    function checkInput() {
-                        var uname = document.getElementById("uname")
-                        if (uname.value.length == 0) {
-                            alert("Invalid account.")
-                            return false;
-                        }
-
-                        var pwd = document.getElementById("pwd")
-                        if (pwd.value.length == 0) {
-                            alert("Invalid password.")
-                            return false;
-                        }
+            <input type="submit" class="btn btn-default" onclick="return checkInput();" value="Register">
+            <script type="text/javascript">
+                function checkInput() {
+                    var uname = document.getElementById("uname")
+                    if (uname.value.length == 0) {
+                        alert("Invalid account.")
+                        return false;
                     }
-                </script>
-            </div>
-        </form>
+
+                    var pwd = document.getElementById("pwd")
+                    if (pwd.value.length == 0) {
+                        alert("Invalid password.")
+                        return false;
+                    }
+                }
+            </script>
+    </div>
+    </form>
     </div>
 
 </body>
