[update] register progress is finished.

--- a/views/login.html
+++ b/views/login.html
@@ -14,7 +14,7 @@
         <form method="POST" action="/login/signin">
             <div class="form-group">
                 <label>Account</label>
-                <input type="text" name="uname" class="form-control" placeholder="Email" id="uname">
+                <input type="text" name="email" class="form-control" placeholder="Email" id="email">
             </div>
             
             <div class="form-group">
@@ -27,13 +27,14 @@
                 <script type="text/javascript" >
                     function checkInput() 
                     {
-                        if (checkInputLength('uname', 1, 1024) == false) {
+                        if (checkInputLength('email', 1, 1024) == false) {
 
                             alert('Invalid account')
                             return false;
                         }
 
-                        if (false == checkWithRegex('uname', "[\w!#$%&'*+/=?^_`{|}~-]+(?:\.[\w!#$%&'*+/=?^_`{|}~-]+)*@(?:[\w](?:[\w-]*[\w])?\.)+[\w](?:[\w-]*[\w])?")) {
+                        if (false == checkWithRegex('email', "[\\w!#$%&'*+/=?^_`{|}~-]+(?:\\.[\\w!#$%&'*+/=?^_`{|}~-]+)*@(?:[\\w](?:[\\w-]*[\\w])?\\.)+[\\w](?:[\\w-]*[\\w])?")) {
+
                             alert('Invalid email account format')
                             return false
                         }
