--- a/views/newIssue.html
+++ b/views/newIssue.html
@@ -11,10 +11,9 @@
         </div>
     </div>
 
-    <p>
-        <h1>Hello world</h1>
-        {{if .IsLogin}} had login {{else}} Anonymous {{end}}
-    </p>
+    <div class="container">
+    </div>
+
 
 </body>
 
