--- a/views/issueList.html
+++ b/views/issueList.html
@@ -12,6 +12,9 @@
     </div>
 
     <div class="container">
+        <div>
+            <h1>Hi{{.ProjectTitle}} <small> world</small></h1>
+        </div>
         <a href="/issue/new">New issue</a>
         <table class="table table-hover table-condensed">
             <thead>
