--- a/views/newIssue.html
+++ b/views/newIssue.html
@@ -14,13 +14,13 @@
     <div class="container">
         <form action="/issue/new" method="post">
             <div class="form-group">
-                <label>Title</label>
+                <label>Title:</label>
                 <input type="text" class="form-control" name="title" id="title" placeholder="Issue Title">
             </div>
 
             <div class="form-group">
-                <label>Description</label>
-                <input type="text" class="form-control" name="description" id="description">
+                <label>Description:</label>
+                <textarea id="description" name="description" class="form-control" placeholder="Please input the description here." rows="10"></textarea>
             </div>
 
             <div class="form-group">
