[update] adjust the css

--- a/views/newIssue.html
+++ b/views/newIssue.html
@@ -14,21 +14,13 @@
     <div class="container">
         <form action="/issue/new" method="post">
             <div class="form-group">
-<<<<<<< HEAD
                 <label>Title:</label>
-=======
-                <label >Title:</label>
->>>>>>> [wip] new issue page, submit button
-                <input type="text" class="form-control" name="title" id="title" placeholder="Issue Title">
+                <input id="title" name="title" type="text" class="form-control" placeholder="Issue Title">
             </div>
 
             <div class="form-group">
                 <label>Description:</label>
-<<<<<<< HEAD
                 <textarea id="description" name="description" class="form-control" placeholder="Please input the description here." rows="10"></textarea>
-=======
-                <textarea class="form-control" name="description" id="description" rows="10" placeholder="Bug describes here."></textarea>
->>>>>>> [wip] new issue page, submit button
             </div>
 
             <div class="form-group">
@@ -141,7 +133,7 @@
             </div>
 
             <!-- 分割线 -->
-            <hr class="seperate-line" width="80%" color=#987cb9 SIZE=3>
+            <hr class="seperate-line" width="100%" color=#987cb9 SIZE=3>
 
             <!-- 提交按钮 -->
             <div class="form-group">
