--- a/views/newIssue.html
+++ b/views/newIssue.html
@@ -15,7 +15,7 @@
         <form action="/issue/new" method="post">
             <div class="form-group">
                 <label>Title:</label>
-                <input id="title" name="title" type="text" class="form-control" placeholder="Issue Title">
+                <input type="text" class="form-control" name="title" id="title" placeholder="Issue Title">
             </div>
 
             <div class="form-group">
@@ -133,11 +133,12 @@
             </div>
 
             <!-- 分割线 -->
-            <hr class="seperate-line" width="100%" color=#987cb9 SIZE=3>
+            <hr class="seperate-line" width="80%" color=#987cb9 SIZE=3>
 
             <!-- 提交按钮 -->
             <div class="form-group">
-                <input class="btn btn-default" type="button" id="submit" name="submit" value="Submit">
+                <input class="btn btn-default" type="button" id="submit" name="submit" value="Submit" onclick="return submitNewBug();">
+                <script async src="/static/js/qatracking/bugUtils.js"></script>
             </div>
 
         </form>
