[wip] new issue page

--- a/views/newIssue.html
+++ b/views/newIssue.html
@@ -137,7 +137,7 @@
 
             <!-- 提交按钮 -->
             <div class="form-group">
-                <input class="btn btn-default" type="button" id="submit" name="submit" value="Submit" onclick="return submitNewBug();">
+                <input class="btn btn-default" type="submit" value="Submit" onclick="return submitNewBug();">
                 <script async src="/static/js/qatracking/bugUtils.js"></script>
             </div>
 
