[wip] new issue page

--- a/views/issueList.html
+++ b/views/issueList.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <html>
-
-{{template "header"}}
-
+    <head>
+        {{template "header"}}
+    </head>
 <body>
 
     <div class="navbar navbar-default">
