--- a/views/login.html
+++ b/views/login.html
@@ -1,7 +1,8 @@
 <!doctype html>
 <html>
-{{template "header"}}
-
+    <head>
+        {{template "header"}}
+    </head>
 <body>
 
     <div class="navbar navbar-default">
